--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,3 +1,17 @@
-
+footer{
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    width: 1348px;
+    left: 0;
+    height: 100px;
+    background-color: rgb(0, 0, 0);
+    color: rgb(153, 153, 153);
+    font-size: 12px;
+    img{
+        max-width: 180px;
+    }
+}
 
 
