--- a/src/components/section-item/sectionItem.scss
+++ b/src/components/section-item/sectionItem.scss
@@ -40,11 +40,11 @@
         padding: 0;
         li{
             background-color: rgb(240, 235, 230);
-            padding: 10px;
+            padding: 5px 10px;
             list-style: none;
             border-bottom: 1px solid black;
             box-shadow: 1px 1px 5px 1px rgb(182, 181, 181);
-            margin-bottom: 2px;
+            margin-bottom: 10px;
             cursor: pointer;
         }
         li:hover{
