formik Helmet-title

--- a/src/components/comics/comics.scss
+++ b/src/components/comics/comics.scss
@@ -22,6 +22,7 @@
     grid-template-rows: 1fr 1fr;
     gap: 15px;
     grid-column-gap: 20px;
+    padding: 0;
     .comicsItem{
         list-style: none;
         display: inline-block;
