--- a/src/components/comics-item/comics-item.scss
+++ b/src/components/comics-item/comics-item.scss
@@ -1,31 +1,42 @@
-.comic-item{
-    display: flex;
-    justify-content: space-between;
-    max-width: 100%;
-    height: 450px;
-    div{
-        max-width: 300px;
-        h2{
-            margin-bottom: 20px;
-        }
-        p{
-            margin-bottom: 10px;
-        }
+.comic-item {
+  display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+  height: 450px;
+  padding: 50px 300px;
+  div {
+    max-width: 300px;
+    padding: 20px;
+    .price {
+      font-size: 20px;
+      font-weight: 700;
+      color: brown;
+      padding: 0;
     }
-    img{
-        width: 300px;
-        height: 100%;
+    h2 {
+      margin-bottom: 20px;
     }
-    a{
-        color: black;
-        text-decoration: none;
+    p {
+      margin-bottom: 10px;
     }
-    a:hover{
-        color: brown;
-    }
-}
-.price{
+  }
+  img {
+    width: 300px;
+    height: 100%;
+  }
+  a {
+    background-color: rgb(117, 117, 117);
     font-size: 20px;
-    font-weight: 700;
-    color: brown;
+    color: black;
+    text-decoration: none;
+    padding: 10px 40px;
+    border-radius: 5px;
+    display: block;
+    height: max-content;
+    transition: 0.5s;
+  }
+  a:hover {
+    background-color: black;
+    color: rgb(255, 255, 255);
+  }
 }
