--- a/src/components/section-item/sectionItem.scss
+++ b/src/components/section-item/sectionItem.scss
@@ -1,56 +1,59 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-.section__item{
-    max-width: 100%;
-    height: auto;
-    display: flex;
-    align-items: center;
-    img{
-        width: 50%;
-    }  
-    div{
-        text-align: start;
-        h4{
-            text-align: center;
-            margin-bottom: 40px;
-        } 
-        button{
-            margin-left: 10px;
-            margin-top: 5px;
-            background-color: black;
-            color: blanchedalmond;
-            padding: 5px 20px;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: .5s;
-        }
-        button:hover{
-            transform: translateY(-5px) translateX(5px);
-        }
+.section__item {
+  max-width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+
+  #img {
+    width: 50%;
+  }
+  .sect_item_text {
+    text-align: start;
+    padding-left: 20px;
+    h4 {
+      text-align: center;
+      margin-bottom: 40px;
     }
+    button {
+      margin-left: 10px;
+      margin-top: 5px;
+      background-color: black;
+      color: blanchedalmond;
+      padding: 5px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: 0.5s;
+    }
+    button:hover {
+      background-color: white;
+      color: black;
+      // transform: scale(1.1);
+    }
+  }
 }
 
-.comics__item{
-    margin-top: 20px;
-    max-width: 100%;
-    height: auto;
-    ul{
-        margin-top: 5px;
-        padding: 0;
-        li{
-            background-color: rgb(240, 235, 230);
-            padding: 5px 10px;
-            list-style: none;
-            border-bottom: 1px solid black;
-            box-shadow: 1px 1px 5px 1px rgb(182, 181, 181);
-            margin-bottom: 10px;
-            cursor: pointer;
-        }
-        li:hover{
-            color: white;
-            background-color: black;
-        }
+.comics__item {
+  margin-top: 20px;
+  max-width: 100%;
+  height: auto;
+  ul {
+    margin-top: 5px;
+    padding: 0;
+    li {
+      background-color: rgb(240, 235, 230);
+      padding: 5px 10px;
+      list-style: none;
+      border-bottom: 1px solid black;
+      box-shadow: 1px 1px 5px 1px rgb(182, 181, 181);
+      margin-bottom: 10px;
+      cursor: pointer;
     }
-    
+    li:hover {
+      color: white;
+      background-color: black;
+    }
+  }
 }
