--- a/src/components/section/section.scss
+++ b/src/components/section/section.scss
@@ -1,95 +1,102 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
-.wrapper{
-    display: grid;
-    grid-template-columns: 60% 1fr;
-    gap: 20px;
-    position: relative;
-    .iron{
-        pointer-events: none;
-        position: absolute;
-        right: 0;
-        bottom: 40px;
-        max-width: 300px;
-        height: auto;
-        img{
-            width: 100%;
-            height: 100%;
-        }
-    }
-}
-
-.sect__item{
-    position: relative;
-    transition: all ease .3s;
-    height: 250px;
-    cursor: pointer;
-    img{
-        width: 100%;
-    }
-    div{
-        padding: 10px;
-        width: 100%;
-        height: 30%;
-        background-color: rgb(0, 0, 0);
-        position: absolute;
-        bottom: 0;
-        h2{
-            font-size: 20px;
-            color: rgb(250, 250, 250);
-            cursor: pointer;
-        }
-    }
-}
-.sect__item:hover{
-    transform: translateY(5px);
-    box-shadow: 5px 5px 5px 1px black;
-}
-.sect__item h2:hover{
-    color: rgb(54, 6, 6);
-}
-.sect{
-    max-width: 600px;
+.wrapper {
+  display: grid;
+  grid-template-columns: 65% 1fr;
+  gap: 20px;
+  position: relative;
+  .iron {
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    bottom: 40px;
+    max-width: 300px;
     height: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 15px;
-    box-shadow: -2px -2px 5px 1px rgb(148, 139, 139);
-}
-.sect2{
-    padding: 20px;
-    height: max-content;
-    text-align: start;
-    box-shadow: -2px -2px 5px 1px rgb(148, 139, 139);
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
 
+.sect__item {
+  position: relative;
+  transition: all ease 0.3s;
+  height: 370px;
+  cursor: pointer;
+  span {
+    height: 100%;
+  }
+  .sect_img {
+    width: 100%;
+    height: 100%;
+  }
+  div {
+    padding: 10px;
+    width: 100%;
+    height: 30%;
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+    bottom: 0;
+    h2 {
+      font-size: 30px;
+      color: rgb(250, 250, 250);
+      cursor: pointer;
+    }
+  }
+}
+.sect__item:hover {
+  transform: translateY(5px);
+  box-shadow: 5px 5px 5px 1px black;
+}
+.sect__item h2:hover {
+  color: rgb(246, 0, 0);
+}
+.sect {
+  padding: 20px;
+  max-width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 20px;
+  box-shadow: -2px -2px 5px 1px rgb(148, 139, 139);
+}
+.sect2 {
+  padding: 20px;
+  height: max-content;
+  text-align: start;
+  box-shadow: -2px -2px 5px 1px rgb(148, 139, 139);
+}
 
-.all{
-    margin-left: 23.5%;
-    margin-top: 20px;
+.section_bottom {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+  .all {
     background-color: black;
     color: blanchedalmond;
-    padding: 5px 50px;
-    border-radius: 10px;
+    padding: 10px 50px;
+    border-radius: 10px 10px 0 0;
     cursor: pointer;
-    transition: .5s;
-}
-.all:hover{
+    transition: 0.8s;
+    font-weight: bold;
+    border-bottom: 1px solid black;
+    border: none;
+  }
+  .all:hover {
     background-color: rgb(255, 255, 255);
     color: black;
-    transform: translateY(-5px) translateX(5px);
+  }
+  .all:disabled {
+    filter: grayscale(0.5);
+  }
 }
-.all:disabled{
-    filter: grayscale(.5);
-}
-
 
 ///////////////////
-.show{
-    transform: translateY(5px);
-    box-shadow: 5px 5px 5px 1px black;
-} 
-
+.show {
+  transform: translateY(5px);
+  box-shadow: 5px 5px 5px 1px black;
+}
