--- a/src/spinner/spinner.css
+++ b/src/spinner/spinner.css
@@ -1,7 +1,10 @@
-
 @keyframes ldio-9cqu711yg2d {
-  0% { opacity: 1 }
-  100% { opacity: 0 }
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 .ldio-9cqu711yg2d div {
   left: 94px;
@@ -13,51 +16,63 @@
   height: 24px;
   border-radius: 6px / 12px;
   transform-origin: 6px 52px;
-}.ldio-9cqu711yg2d div:nth-child(1) {
+}
+.ldio-9cqu711yg2d div:nth-child(1) {
   transform: rotate(0deg);
   animation-delay: -0.9166666666666666s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(2) {
+}
+.ldio-9cqu711yg2d div:nth-child(2) {
   transform: rotate(30deg);
   animation-delay: -0.8333333333333334s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(3) {
+}
+.ldio-9cqu711yg2d div:nth-child(3) {
   transform: rotate(60deg);
   animation-delay: -0.75s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(4) {
+}
+.ldio-9cqu711yg2d div:nth-child(4) {
   transform: rotate(90deg);
   animation-delay: -0.6666666666666666s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(5) {
+}
+.ldio-9cqu711yg2d div:nth-child(5) {
   transform: rotate(120deg);
   animation-delay: -0.5833333333333334s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(6) {
+}
+.ldio-9cqu711yg2d div:nth-child(6) {
   transform: rotate(150deg);
   animation-delay: -0.5s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(7) {
+}
+.ldio-9cqu711yg2d div:nth-child(7) {
   transform: rotate(180deg);
   animation-delay: -0.4166666666666667s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(8) {
+}
+.ldio-9cqu711yg2d div:nth-child(8) {
   transform: rotate(210deg);
   animation-delay: -0.3333333333333333s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(9) {
+}
+.ldio-9cqu711yg2d div:nth-child(9) {
   transform: rotate(240deg);
   animation-delay: -0.25s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(10) {
+}
+.ldio-9cqu711yg2d div:nth-child(10) {
   transform: rotate(270deg);
   animation-delay: -0.16666666666666666s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(11) {
+}
+.ldio-9cqu711yg2d div:nth-child(11) {
   transform: rotate(300deg);
   animation-delay: -0.08333333333333333s;
   background: #1d0e0b;
-}.ldio-9cqu711yg2d div:nth-child(12) {
+}
+.ldio-9cqu711yg2d div:nth-child(12) {
   transform: rotate(330deg);
   animation-delay: 0s;
   background: #1d0e0b;
@@ -68,6 +83,7 @@
   display: inline-block;
   overflow: hidden;
   background: #ffffff;
+  margin: 0 auto;
 }
 .ldio-9cqu711yg2d {
   width: 100%;
@@ -75,6 +91,8 @@
   position: relative;
   transform: translateZ(0) scale(1);
   backface-visibility: hidden;
-  transform-origin: 0 0; /* see note above */
+  transform-origin: 0 0;
 }
-.ldio-9cqu711yg2d div { box-sizing: content-box; }
+.ldio-9cqu711yg2d div {
+  box-sizing: content-box;
+}
