--- a/src/components/comics-item/comics-item.scss
+++ b/src/components/comics-item/comics-item.scss
@@ -40,3 +40,34 @@
     color: rgb(255, 255, 255);
   }
 }
+
+// media////////////////////////////////////////////////
+
+@media (max-width: 768px) {
+  .information {
+    h1 {
+      margin: 0;
+    }
+  }
+  .comic-item {
+    height: max-content;
+    display: block;
+    padding: 20px;
+    padding-top: 0;
+    img {
+      height: 420px;
+    }
+    .active {
+      font-size: 25px;
+      padding: 5px 20px;
+    }
+    div {
+      h2 {
+        margin: 0;
+      }
+      p {
+        margin: 0;
+      }
+    }
+  }
+}
