--- a/src/components/search-character/search-character.scss
+++ b/src/components/search-character/search-character.scss
@@ -55,3 +55,21 @@
     border: none;
   }
 }
+
+// media////////////////////////////////////////////////
+
+@media (max-width: 768px) {
+  .form {
+    div {
+      display: block;
+      input {
+        width: 100%;
+        margin-top: 5px;
+      }
+    }
+    .error {
+      right: 35px;
+      bottom: 75px;
+    }
+  }
+}
