--- a/src/components/section/section.scss
+++ b/src/components/section/section.scss
@@ -116,6 +116,9 @@
       .sect__item {
         div {
           max-width: 100%;
+          h2 {
+            margin: 0;
+          }
         }
         max-width: 100%;
         height: 160px;
