--- a/src/components/comics-item/comics-item.scss
+++ b/src/components/comics-item/comics-item.scss
@@ -54,6 +54,8 @@
     display: block;
     padding: 20px;
     padding-top: 0;
+    margin-bottom: 40px;
+
     img {
       height: 420px;
     }
@@ -61,6 +63,7 @@
       font-size: 25px;
       padding: 5px 20px;
     }
+
     div {
       h2 {
         margin: 0;
