--- a/src/index.scss
+++ b/src/index.scss
@@ -57,7 +57,8 @@
 
 @media (max-width: 768px) {
   .information {
-    width: 335px;
+    width: 100%;
+    padding: 0;
     h1 {
       margin: 0;
     }
